--- a/app/src/main/res/layout/fragment_basic_timer.xml
+++ b/app/src/main/res/layout/fragment_basic_timer.xml
@@ -219,19 +219,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout_2">
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/cancelButton"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/button_pressed_selector"
-                    android:padding="10dp"
-                    android:text="@string/cancel"
-                    android:textColor="@color/black" />
-
-                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/pauseButton"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
                     android:layout_weight="1"
@@ -240,6 +229,16 @@
                     android:text="@string/pause"
                     android:textColor="@color/black" />
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/cancelButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_pressed_selector"
+                    android:padding="10dp"
+                    android:text="@string/cancel"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
