--- a/app/src/main/res/layout/timer_item.xml
+++ b/app/src/main/res/layout/timer_item.xml
@@ -78,19 +78,16 @@
                         android:padding="20dp"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/baseline_delete_forever_24"
-                        android:backgroundTint="@color/red"/>
+                        android:background="@drawable/delete_click_selector" />
 
 
                     <ImageButton
                         android:id="@+id/modifyButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
-
-                        android:background="@drawable/baseline_create_24"
                         android:layout_centerInParent="true"
-                        android:backgroundTint="@color/blue" />
+                        android:background="@drawable/modify_click_selector"
+                        android:padding="20dp" />
 
                     <ImageButton
                         android:id="@+id/playButton"
@@ -98,10 +95,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:padding="20dp"
-
                         android:layout_centerVertical="true"
-                        android:background="@drawable/twotone_play_circle_outline_24"
-                        android:backgroundTint="@color/darkgreen" />
+                        android:background="@drawable/play_click_selector" />
 
                 </RelativeLayout>
 
